# afl

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  todo.txt
doc/: bffnt.txt  bfres.txt  bntx.txt  sarc.txt  yaz0.txt
include/: bffnt.h  bfres.h  bntx.h  byml.h  sarc.h  types.h  util.h  yaz0.h
include/afl/: bffnt.h  bfres.h  bntx.h  result.h  sarc.h  types.h  util.h  vector.h  yaz0.h
include/afl/byml/: common.h  reader.h  writer.h
include/afl/sarc/: reader.h  writer.h
include/byml/: common.h  reader.h  writer.h
lib/: bffnt.cpp  bfres.cpp  sarc.cpp  szs.cpp  util.cpp  yaz0.cpp
lib/afl/: CMakeLists.txt  bffnt.cpp  bfres.cpp  bntx.cpp  sarc.cpp  szs.cpp  util.cpp  yaz0.cpp
lib/afl/bfres/: CMakeLists.txt  dict.cpp  fmat.cpp  fmdl.cpp  fshp.cpp  fvtx.cpp  reader.cpp  util.cpp
lib/afl/byml/: reader.cpp  writer.cpp
lib/afl/sarc/: CMakeLists.txt  reader.cpp  writer.cpp
lib/byml/: reader.cpp  writer.cpp
lib/tinygltf/: CMakeLists.txt  tinygltf.cpp
src/: bffnt.cpp  bntx.cpp  byml.cpp  main.cpp  sarc.cpp  sarc.h  types.h  util.cpp  util.h  yaz0.cpp
src/byml/: reader.cpp  reader.h  writer.cpp  writer.h
stage_search/: main.cpp
tests/: main.cpp
